Fix for misaligned avatars

--- a/css/GryphonCustomCSS/GryphonCustom.css
+++ b/css/GryphonCustomCSS/GryphonCustom.css
@@ -22,6 +22,7 @@ html::before {
 }
 
 .postrender .postinner > .postuser .postavatar {
+	margin-right: 1px;
 	transition: none;
 }
 
